Fix: invalid `letter-spacing` unit (#1800)

--- a/assets/css/1-tools/_vars.sass
+++ b/assets/css/1-tools/_vars.sass
@@ -13,7 +13,7 @@ $body-text-letter-spacing: 0.02em
 $body-text-line-height: 1.4
 
 $title-text: 'cubanoregular'
-$title-text-letter-spacing: .4
+$title-text-letter-spacing: .4px
 
 
 // Coding Train Colors
